@@ -18067,3 +18067,6 @@ failed: wireguard over ipv6
 ---------------------------------- 2026-02-11 22:42:42 26.2.11
 no failed: wireguard over ipv6
 qc pass: wireguard over ipv6
+---------------------------------- 2026-02-14 17:00:25 26.2.14
+no qc pass: wireguard over ipv6
+failed: wireguard over ipv6
